<?xml version="1.0"?>
<package format="2">
  <name>semantic_vision_bridge</name>
  <version>0.1.0</version>
  <description>Jetson-side bridge for Zynq semantic perception and navigation fusion.</description>
  <maintainer email="dev@miningcar.local">MiningCar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <!-- ROS1 does not use build_type in package.xml -->
  </export>
</package>
